--- a/_config.yml
+++ b/_config.yml
@@ -91,7 +91,7 @@ analytics:
 # Site Author
 author:
   name             : "Ajay Sharma"
-  avatar           : "li_pic.jpg"
+  avatar           : "/assets/images/li_pic.jpg"
   bio              : "Just another boring - time traveling - Data Scientist."
   location         : "NYC"
   email            : "asharma567567@gmail.com"
@@ -187,7 +187,7 @@ sass:
 
 # Outputting
 permalink: /:categories/:title/
-paginate: 5 # amount of posts to show
+paginate: 3 # amount of posts to show
 paginate_path: /page:num/
 timezone: # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 
